# NAU_v18Jul

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  README.md  agent.py  app_constants.py  backtest.py  backtest_robustness.py  capture_baseline.py  chart_indicators.py  codegate.py  composer.py  constants.py  custom_block_store.py  data.py  indicators.py  loop_runner.py  parallel_exec.py  pyproject.toml  regression_baseline.json  requirements.txt  sandbox.py  server.py  state.py  strategies.py  token_ledger.py  wfo_optimizer.py  wiki_helper.py
.claude/: settings.json  studio_e2e.mjs
.claude/hooks/: kg_sync.sh  second_brain_stop.sh  second_brain_trigger.sh
.github/workflows/: ci.yml
design2/: Nautilus Lab.dc.html  README.md
design_handoff_nautilus_lab/: Nautilus Lab.dc.html  README.md
legacy/: streamlit_app.py
legacy/pages/: 1_Strateji_Yarat.py  2_Backtest.py
nautilus_wiki/: .gitignore  CLAUDE.md  index.md  log.md
nautilus_wiki/.obsidian/: app.json
nautilus_wiki/lint/: 2026-07-07_health.md  2026-07-07_llm_audit.md  2026-07-08_health.md  2026-07-09_health.md  2026-07-13_health.md  2026-07-18_health.md  2026-07-19_health.md  2026-07-20_health.md  2026-07-21_health.md  2026-07-22_health.md  2026-07-23_health.md  2026-07-24_health.md
nautilus_wiki/sources/: 01_readme_snapshot.md  02_architecture_docs.md  03_strategies_docs.md  04_backtesting_docs.md  05_latest_docs_research.md  06_concepts_docs_v1230.md
nautilus_wiki/tools/: wiki_tools.py
scripts/: install-wiki-sync-skill.ps1
tests/: conftest.py  test_agent_fixes.py  test_bybit_timestamps.py  test_catalog_identity.py  test_data_backfill.py  test_data_page.py  test_describe_backtest.py  test_fixes.py  test_guards_and_indicators.py  test_hint_faithful.py  test_index_stream_empty.py  test_lock_nesting.py  test_metrics.py  test_metrics_fixes.py  test_mtf_composer.py  test_ohlc_blocks.py  test_ops_fixes.py  test_parallel_exec.py  test_perf_equivalence.py  test_plan_preview.py  test_regression_anchors.py  test_regression_anchors_e2e.py  test_regression_anchors_high.py  test_reports_layout.py  test_robustness.py  test_sandbox.py  test_studio_ui_fixes.py  test_tf_sweep.py  test_timeline.py  test_token_ledger.py  test_trade_reasons.py  test_volume_blocks.py
web/: shared.py  viewmodels.py
web/routes/: agent_backtest.py  backtest.py  chart.py  dashboard.py  data.py  fragments.py  lab.py  loop.py  reports.py  (+5 more)
(+125 files in other folders)
